--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 .navbar
 {
     min-height: 180px;
@@ -6,15 +5,52 @@
 
 .bg-strip-red
 {
-    border:#B20000 solid 15px;
-    margin-top: 180px;
+    background-color: red;
+    margin-top: -20px;
 }
+
+.bg-strip-red-push-content-down
+{
+    margin-bottom: 20px;
+}
+
+.bg-strip-red h6
+{
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
+    /*padding-left: 40px;*/
+}
+
+.navbar-toggle
+{
+    margin-top: 120px;
+    margin-right: 40px;
+}
+
+.minus-padding
+{
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+.add-padding
+{
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.padding-logo-left
+{
+    padding-left: 40px;
+}
+
 
 @media (min-width: 768px)
 {
     .navbar-right
     {
-        margin-right: 0px;
+        margin-right: 40px;
         margin-top: 129px;
     }
     
@@ -23,21 +59,26 @@
         margin-left: 100px;
     }
     
-    
-}
-
-@media (max-width: 767px)
-{
-    
-    .navbar-toggle
+    .navbar-static-top 
     {
-        margin-top: 135px;
+        position:fixed;
+        top:0;
+        right:0;
+        left:0;
+        
+    }
+    
+    .bg-strip-red-push-content-down
+    {
+        margin-bottom: 20px;
     }
     
     .bg-strip-red
     {
-        /*margin-top: 434px;*/
+        margin-top: 180px;
     }
     
 }
+
+
 
