--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,6 @@
     color: white;
     font-size: 1.5rem;
     font-weight: bold;
-    /*padding-left: 40px;*/
 }
 
 .navbar-toggle
@@ -45,20 +44,84 @@
     padding-left: 40px;
 }
 
+.home-page-headings
+{
+    color: black;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.home-page-headings~img
+{
+    border: 1px solid black;
+    margin-bottom: 10px;
+}
+
+.bg-content-screen
+{
+    background-color: #DCDCDC;
+    border-bottom: 1px solid black;
+    margin-top: -20px;
+}
+
+@media (max-width: 480px)
+{
+    .media-big-screen
+    {
+        display: none;
+    }
+}
+
+@media (min-width: 0px) and (max-width: 768px)
+{
+    .add-padding
+    {
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    
+    .padding-logo-left
+    {
+        padding-left: 5px;
+    }
+    
+    .navbar-toggle
+    {
+        margin-right: 5px;
+    }
+}
+
 
 @media (min-width: 768px)
 {
     .navbar-right
     {
-        margin-right: 40px;
+        margin-right: 20px;
         margin-top: 129px;
     }
     
-    .navbar-toggle
+    .add-padding
     {
-        margin-left: 100px;
+        padding-left: 20px;
+        padding-right: 20px;
     }
     
+    .padding-logo-left
+    {
+        padding-left: 20px;
+    }
+    
+    .bg-strip-red-push-content-down
+    {
+        margin-bottom: 20px;
+    }
+    
+    
+}
+
+@media (min-width: 1200px)
+{
     .navbar-static-top 
     {
         position:fixed;
@@ -68,30 +131,39 @@
         
     }
     
-    .bg-strip-red-push-content-down
-    {
-        margin-bottom: 20px;
-    }
-    
     .bg-strip-red
     {
         margin-top: 180px;
     }
     
-}
-
-@media (min-width: 1200px)
-{
     .media-big-screen img
     {
         margin-left: auto;
     }
     
-    .media-big-screen p
+    .media-big-screen-heading-move-right
     {
-        margin-left: auto;
+        text-align: center;
+    }
+    
+    .navbar-right
+    {
+        margin-right: 40px;
+    }
+    
+    .add-padding
+    {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+    
+    .padding-logo-left
+    {
+        padding-left: 40px;
     }
 }
+
+
 
 
 
