--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,57 @@
     margin-top: -20px;
 }
 
+legend
+{
+    font-size: 1.5rem;
+    font-weight: bold; 
+    background-color: #fff;
+    border-radius: 5px;
+    border: 1px solid #999;
+    padding: 4px 15px;
+}
+
+label.field
+{
+    display: block;
+    text-align: right;
+    width: 100px;
+    float: left;
+    clear: both;
+}
+
+input
+{
+    width: 200px;
+    border-radius: 5px;
+    padding: 6px 8px;
+    margin-bottom: 3%;
+}
+
+textarea
+{
+    width: 200px;
+    border-radius: 5px;
+    padding: 6px 8px;
+    margin-bottom: 3%;
+}
+
+.field
+{
+    padding: 11px 16px;
+}
+
+fieldset
+{
+    border: 1px solid #999;
+    border-radius: 20px;
+    /*clear: both;*/
+    padding: 20px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    background-color:rgba(129, 187, 201,.2);
+}
+
 @media (max-width: 480px)
 {
     .media-big-screen
