--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,8 @@
     font-size: 1.5rem;
     font-weight: bold;
     margin-bottom: 20px;
+    margin-top: 30px;
+    
 }
 
 .home-page-headings~img
@@ -65,6 +67,46 @@
     margin-top: -20px;
 }
 
+.services-links
+{
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+.services-links a
+{
+    border: 5px solid #000; 
+	padding: 2px 2px; 
+	background: #000000; 
+	
+	color:#FFFFFF; 
+	border-radius: 5px; 
+	text-align:center; 
+	text-decoration:none;
+	margin-right:4.5%;
+	margin-bottom:3%;
+	display:inline-block;
+}
+
+.bg-footer
+{
+    background-color: #DCDCDC;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    font-weight: bold;
+    border-top: 1px solid black;
+}
+
+.media-big-screen
+{
+    margin-bottom: 30px;
+}
+
+.form-push-down
+{
+    margin-top: 30px;
+}
+
 legend
 {
     font-size: 1.5rem;
@@ -75,45 +117,45 @@ legend
     padding: 4px 15px;
 }
 
-label.field
-{
-    display: block;
-    text-align: right;
-    width: 100px;
-    float: left;
-    clear: both;
-}
+/*label.field*/
+/*{*/
+/*    display: block;*/
+/*    text-align: right;*/
+/*    width: 100px;*/
+/*    float: left;*/
+/*    clear: both;*/
+/*}*/
 
-input
-{
-    width: 200px;
-    border-radius: 5px;
-    padding: 6px 8px;
-    margin-bottom: 3%;
-}
+/*input*/
+/*{*/
+/*    width: 200px;*/
+/*    border-radius: 5px;*/
+/*    padding: 6px 8px;*/
+/*    margin-bottom: 3%;*/
+/*}*/
 
-textarea
-{
-    width: 200px;
-    border-radius: 5px;
-    padding: 6px 8px;
-    margin-bottom: 3%;
-}
+/*textarea*/
+/*{*/
+/*    width: 200px;*/
+/*    border-radius: 5px;*/
+/*    padding: 6px 8px;*/
+/*    margin-bottom: 3%;*/
+/*}*/
 
-.field
-{
-    padding: 11px 16px;
-}
+/*.field*/
+/*{*/
+/*    padding: 11px 16px;*/
+/*}*/
 
 fieldset
 {
-    border: 1px solid #999;
+    border: 1px solid #000;
     border-radius: 20px;
     /*clear: both;*/
     padding: 20px;
     margin-top: 10px;
     margin-bottom: 20px;
-    background-color:rgba(129, 187, 201,.2);
+    background-color: #DCDCDC;
 }
 
 @media (max-width: 480px)
