--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,4 @@
-.footer-static-bottom 
-{
-    position:fixed;
-    bottom:0;
-    right:0;
-    left:0;
-}
 
-.footer-static-bottom-push-content-up
-{
-    padding-bottom: 20px;
-}
 
 .navbar
 {
@@ -282,6 +271,41 @@ fieldset
     {
         margin-left: 4%;
     }
+    
+    .footer-static-bottom 
+    {
+        /*position:fixed;*/
+        /*bottom:0;*/
+        /*right:0;*/
+        /*left:0;*/
+        
+        position:absolute;
+       bottom: 0px;
+       height:25px;
+       width: 100%;       
+       left: 0px;       
+       right: 0px;
+       /*border:1px solid black;*/
+       display: inline-block;       
+       cursor:pointer;
+       /*background:#FFE4E1;    */
+    }
+    
+    .slide { 
+    border:1px solid black;
+    height:125px;    
+    left: 0px;
+    right:0px;
+    bottom: 25px;
+    display: none;    
+    position: absolute;
+}
+    
+    /*.body-substitute*/
+    /*{*/
+    /*    padding-bottom: 150px;*/
+    /*}*/
+    
     
     
     
