--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,19 @@ body {
     padding-bottom: 140px;
     min-height: 100%;
 }
+
+video
+{
+    width: 100%;
+    margin-top: 4%;
+}
+
+audio
+{
+    width: 100%;
+    margin-bottom: 2%;
+}
+
 .navbar
 {
     min-height: 180px;
