--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,28 @@ audio
 	display:inline-block;
 }
 
+.social-links li a i
+{
+    width: 32px;
+    height: 32px;
+    padding: 12px 0;
+    border-radius: 50%;
+    font-size: 13px;
+    line-height: 7px;
+    text-align: center;
+    color: #fafafa;
+    background: #8f8f8f;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+
+.social-links li a i:hover
+{
+    background: red;
+}
+
 .bg-footer
 {
     background-color: #DCDCDC;
@@ -149,8 +171,12 @@ audio
 
 .services-img-margin-up-down img
 {
+    border: 2px solid black;
+}
+
+.img-border
+{
     border: 1px solid black;
-	box-shadow: 10px 10px 5px #888888;
 }
 
 .form-group
@@ -274,6 +300,11 @@ fieldset
     .extra-mobile-padding 
     {
         padding-bottom: 220px;
+    }
+    
+    .bg-footer
+    {
+        text-align: center;
     }
 }
 
